apps/complex/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: complex-ingress
spec:
  tls:
  - hosts:
    - complex-staging.wolfixor.shop
    secretName: complex-staging-tls
  rules:
  - host: complex-staging.wolfixor.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: complex
            port:
              number: 80
